--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
     <div class="div"><button>Click Me</button></div>
     <script src="script.js"></script>
-    
+    <footer>
+        <a href="https://github.com/aknokhwal/sher" target="_blank">Github</a>
+    </footer>
 </body>
 </html>
